--- a/client/s.css
+++ b/client/s.css
@@ -2,7 +2,7 @@ body {
     /* font-family: 'Raleway', sans-serif !important; */
     /* font-family: 'Lato+Mono', sans-serif !important; */
     /* font-family: 'Lato', sans-serif !important; */
-     font-size: 110% !important; 
+     /*font-size: 110% !important; */
     /* line-height: 200% !important; */
      background: rgba(0,0,0,.8) !important; 
     /*scroll-behavior: smooth;*/
