--- a/client/nav.jade
+++ b/client/nav.jade
@@ -4,9 +4,9 @@ template(name='nav')
         //     i.bars.large.icon
         if connected
             // a.icon.item.zoom.pointer(href='/' class="{{isActivePath '/'}}")
-            a.icon.item.zoom.pointer(href='/')
+            a.icon.item.zoom(href='/')
                 i.big.link.yin.yang.grey.icon
-            a.icon.item.zoom.pointer(href='/web')
+            a.icon.item.zoom(href='/web')
                 i.big.link.globe.grey.icon
         if currentUser
             unless connected
