--- a/client/profile.jade
+++ b/client/profile.jade
@@ -50,6 +50,13 @@ template(name='profile')
                             .content
                                 .header #{username}
             .twelve.wide.column 
+                +session_kv_button k='profile_section' v='dashboard' l='dashboard' i='dashboard'
+                +session_kv_button k='profile_section' v='friends' l='friends' i='groups'
+                +session_kv_button k='profile_section' v='finance' l='finance' i='money'
+                +session_kv_button k='profile_section' v='posts' l='posts' i='blog'
+                +session_kv_button k='profile_section' v='questions' l='questions' i='faq'
+                +session_kv_button k='profile_section' v='answers' l='answers' i='rss'
+
                 .ui.header #{points_earned}pts earned
                 +user_dashboard
               
