--- a/client/question_edit.jade
+++ b/client/question_edit.jade
@@ -23,7 +23,7 @@ template(name='question_edit')
                     +kve k='question_type' v='multiple_choice' l='multiple choice' i='list'
                     +kve k='question_type' v='open' l='open' i='text width'
                     div
-                    if key_value_is 'question_type' 'multiple_choice'
+                    if kv_is 'question_type' 'multiple_choice'
                         .ui.dividing.header multiple choice
                         div
                         +text_edit k='mc_option_1' l='option 1' d=true
@@ -34,7 +34,7 @@ template(name='question_edit')
                         div
                         +text_edit k='mc_option_4' l='option 4' d=true
                         
-                    if key_value_is 'question_type' 'open'
+                    if kv_is 'question_type' 'open'
                         .ui.dividing.header open answer
                         +kve k='open_answer_type' v='text' l='text' i='header'
                         +kve k='open_answer_type' v='number' l='number' i='hashtag'
