--- a/client/s.css
+++ b/client/s.css
@@ -636,6 +636,14 @@ body {
 }
 
 
+.icon{
+    animation: fadein .5s !important;
+    transition: all 1s ease !important;
+    /* -webkit-transition: opacity .1s ease-out; */
+    animation: fadeout .25s; 
+}
+
+
 
 @keyframes fadeout {
   from { opacity: 1}
