--- a/client/dao.jade
+++ b/client/dao.jade
@@ -1,7 +1,9 @@
 template(name='dao')
-    .ui.stackable.padded.grid
+    .ui.stackable.grid
         .row
             .sixteen.wide.column
+                if skv_is 'thinking' true
+                    i.big.yin.yang.loading.icon
                 // unless viewing_doc
                     // i#clear_tags.link.yin.yang.big.icon(class=loading_class)
                 if selected_tags
@@ -29,26 +31,26 @@ template(name='dao')
                     each ducks
                         +duck 
                 .ui.large.basic.label(title='results') #{doc_count} results
-                +view_mode k='twitter' icon='twitter' color='blue'
-                +view_mode k='video' icon='youtube' color='red'
-                +view_mode k='image' icon='picture' color='green'
-                +view_mode k='posts' icon='newspaper' color='teal'
-                +view_mode k='wikipedia' icon='wikipedia' color='purple'
-                // +view_mode k='stackexchange' icon='stack exchange disabled'
-                // +view_mode k='github' icon='github disabled'
-                // +view_mode k='alpha' icon='disabled brain'
-                +view_mode k='porn' icon='mercury'
-                // +view_mode k='bitcoin' icon='bitcoin disabled'
-                +view_mode k='covid' icon='covid disabled'
+                +view_mode k='twitter' i='twitter' c='blue'
+                +view_mode k='video' i='youtube' c='red'
+                +view_mode k='image' i='picture' c='green'
+                +view_mode k='posts' i='newspaper' c='teal'
+                +view_mode k='wikipedia' i='wikipedia' c='purple'
+                +view_mode k='stackexchange' i='stack exchange disabled'
+                +view_mode k='github' i='github disabled'
+                +view_mode k='alpha' i='disabled brain'
+                +view_mode k='porn' i='mercury'
+                +view_mode k='bitcoin' i='bitcoin disabled'
+                +view_mode k='covid' i='covid disabled'
                 // .ui.header 
                 //     i.smile.large.grey.icon
                 //     |emotion
                 .spacer
-                +emotion_mode k='joy' icon='happy--v1' i2='smile' color='invert green'
-                +emotion_mode k='sadness' icon='sad--v1' i2='sad tear' color='invert blue'
-                +emotion_mode k='anger' icon='angry--v1' i2='frown' color='invert red'
-                +emotion_mode k='disgust' icon='disgusting' i2='grin tongue squint' color='invert orange'
-                +emotion_mode k='fear' icon='scream' i2='tired' color='black'
+                +emotion_mode k='joy' i='happy--v1' i2='smile' c='invert green'
+                +emotion_mode k='sadness' i='sad--v1' i2='sad tear' c='invert blue'
+                +emotion_mode k='anger' i='angry--v1' i2='frown' c='invert red'
+                +emotion_mode k='disgust' i='disgusting' i2='grin tongue squint' c='invert orange'
+                +emotion_mode k='fear' i='scream' i2='tired' c='black'
                 each selected_emotions
                     .ui.black.circular.compact.button.unselect_emotion
                         |#{this}
@@ -90,8 +92,8 @@ template(name='dao')
                 +skve k='sort_direction' value=-1 l='up'
                 +skve k='sort_direction' value=1 l='down'
                 |view
-                +skve k='view_mode' value='cards' l='cards' icon='clone'
-                +skve k='view_mode' value='list' l='list' icon='list'
+                +skve k='view_mode' value='cards' l='cards' i='clone'
+                +skve k='view_mode' value='list' l='list' i='list'
             
                 .ui.cards
                     each docs
@@ -100,7 +102,7 @@ template(name='dao')
                         else
                             +doc
                 
-                //     +session_edit_value_button k='view_section' value='tone' l='tone' icon='smile'
+                //     +session_edit_value_button k='view_section' value='tone' l='tone' i='smile'
                 
                 
 template(name="doc")
@@ -219,12 +221,13 @@ template(name='view_mode')
 
 
 template(name='emotion_mode')
-    if selected_emotion
-        i.huge.pointer.zoomer.icon.toggle_emotion(class="#{i2} #{color}" title=t)
-        // img.ui.inline.image.toggle_emotion.zoomer.pointer(src="https://img.icons8.com/color/50/000000/#{icon}.png" class=cl title=t)
-    else
-        i.big.grey.pointer.zoomer.icon.toggle_emotion(class="#{i2}" title=t)
-        // img.ui.inline.image.toggle_emotion.zoomer.pointer(src="https://img.icons8.com/ios/36/000000/#{icon}.png" class=cl title=t)
+    i.link.zoomer.icon.toggle_emotion(class=toggle_emotion_class title=t)
+    // if selected_emotion
+    //     i.huge.pointer.zoomer.icon.toggle_emotion(class="#{i2} #{color}" title=t)
+    //     // img.ui.inline.image.toggle_emotion.zoomer.pointer(src="https://img.icons8.com/color/50/000000/#{icon}.png" class=cl title=t)
+    // else
+    //     i.big.grey.pointer.zoomer.icon.toggle_emotion(class="#{i2}" title=t)
+    //     // img.ui.inline.image.toggle_emotion.zoomer.pointer(src="https://img.icons8.com/ios/36/000000/#{icon}.png" class=cl title=t)
 
 
 template(name='pull_reddit')
